<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omnimapper_ros</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shengye@ucsd.edu">shengye</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>omnimapper_ros_msgs</depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>visualization_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>laser_geometry</depend>
  <depend>pcl_conversions</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
